<resources>
    <string name="app_name">Parchis</string>
    <string name="iniciar_partida_como_invitado">Iniciar partida como invitado</string>
    <string name="parch_s">PARCHÍS</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="estad_sticas">Estadísticas</string>
    <string name="logotipo_de_la_aplicaci_n">Logotipo de la aplicación</string>
    <string name="iniciar_partida">Iniciar partida</string>
    <string name="unirse_a_partida">Unirse a partida</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="para_volver_al_menu">Para volver al menu</string>
    <string name="txt_game_settings">Dificultad de bots (si hay menos de 4 jugadores)</string>
    <string name="crear_partida_local">Crear partida local</string>
    <string name="comenzar_partida">Comenzar partida</string>
    <string name="n_mero_de_jugadores">Número de jugadores</string>
    <string name="ajustes_de_la_partida">Ajustes de la partida</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="f_cil">Fácil</string>
    <string name="media">Media</string>
    <string name="dif_cil">Difícil</string>
    <string name="boton_volver_desde_settings">boton volver desde settings</string>
    <string name="abandonar_partida">Abandonar partida</string>
    <string name="lanzar_dado">Lanzar dado</string>
    <string name="tablero">Tablero</string>
    <string name="boton_para_volver_desde_estadisticas">boton para volver desde estadisticas</string>
    <string name="elige_el_modo_de_juego">Elige el modo de juego</string>
    <string name="selecci_n_de_modo">Selección de modo</string>
    <string name="boton_volver_desde_modo_de_juego">Boton volver desde modo de juego</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="iniciar_sesi_n_title">Iniciar Sesión</string>
    <string name="registro_title">Registro</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="no_tienes_cuenta_registrate">¿No tienes cuenta? Regístrate</string>
    <string name="ya_tienes_cuenta_inicia_sesion">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="historial_de_partidas">Historial de partidas:</string>
    <string name="interrogación">\?</string>
    <string name="volver">Volver</string>
    <string name="compartir_logros">Compartir Logros</string>
    <string name="jugador_1">Jugador 1</string>
    <string name="jugador_2">Jugador 2</string>
    <string name="jugador_3">Jugador 3</string>
    <string name="jugador_4">Jugador 4</string>
    <string name="turno_jugador">Turno del Jugador: %s</string>
    <string name="share_message">¡Mira mis estadísticas en Parchís! He ganado %1$d partidas.</string>
    <string name="choose_share">Compartir con...</string>
</resources>